@@ -1,4 +1,5 @@
 [B]2.5.8[/B]
+• Add possibility to show item label on top with minimize main menu setting
 • Show mute icon on libraries when mute is enable
 • Fix clearlogos disappearance when mute is enable
 • Fix for LibreELEC settings addon
